--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "react-table": "^7.8.0",
     "redux": "^5.0.1",
     "yup": "^1.6.1"
   },
